1. Улучшения Collection API [#294553]